test: 💍 testing for redirect
BREAKING CHANGE: 🧨 testing for direact

--- a/packages/plugin-docusaurus/src/template/docusaurus.hbs
+++ b/packages/plugin-docusaurus/src/template/docusaurus.hbs
@@ -30,6 +30,10 @@ const config = {
         theme: {
           customCss: require.resolve('@ice/pkg-plugin-docusaurus/css/custom.css'),
         },
+        pages: {
+          path: '.docusaurus/pages',
+          routeBasePath: '/pages'
+        }
       }),
     ],
   ],
